--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -396,6 +396,19 @@ ul {
       }
     }
   }
+
+	&.style4 {
+    list-style: disc;
+    padding-left: 42px;
+
+    li {
+      padding-left: 0.5em;
+    }
+
+		@media screen and (min-width: 737px) {
+			margin-left: 40px;
+		}
+	}
 }
 
 ol {
@@ -665,7 +678,7 @@ ol {
 
     a {
       color: inherit;
-      text-decoration: none;
+      /*text-decoration: none;*/
     }
   }
 }
@@ -826,8 +839,8 @@ ol {
       h3 {
         margin: 0 0 0.75em 0;
         font-size: 1.15em;
-        letter-spacing: 0.05em;
-        margin-top: -0.35em;
+        /*letter-spacing: 0.05em;*/
+        /*margin-top: -0.35em;*/
 
         &:before {
           width: 64px;
