feat: Update footer layout
Footer layout has been updated to better accommodate the contact form and other
contact information displayed therein.

@todo:
 * Connect PHP mail script to contact form.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -193,7 +193,7 @@ form {
   }
 
   textarea {
-    min-height: 10em;
+    min-height: 6em;
   }
 
   .formerize-placeholder {
@@ -1296,6 +1296,11 @@ ol {
       font-size: 10.5pt;
       letter-spacing: 0;
     }
+
+		form textarea {
+			margin: 0 auto;
+		  max-width: 30em;
+		}
 
     h2, h3, h4, h5, h6 {
       font-size: 1.2em;
