--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1432,7 +1432,7 @@ form select {
 }
 /* line 195, ../sass/main.scss */
 form textarea {
-  min-height: 10em;
+  min-height: 6em;
 }
 /* line 199, ../sass/main.scss */
 form .formerize-placeholder {
@@ -2546,46 +2546,52 @@ ol.default li {
   }
 
   /* line 1300, ../sass/main.scss */
+  form textarea {
+    margin: 0 auto;
+    max-width: 30em;
+  }
+
+  /* line 1305, ../sass/main.scss */
   h2, h3, h4, h5, h6 {
     font-size: 1.2em;
     letter-spacing: 0.05em;
     margin: 0 0 1em 0;
   }
 
-  /* line 1306, ../sass/main.scss */
+  /* line 1311, ../sass/main.scss */
   hr {
     margin: 1em 0 1em 0;
   }
 
   /* Section/Article */
-  /* line 1312, ../sass/main.scss */
+  /* line 1317, ../sass/main.scss */
   section, article {
     clear: both;
     padding: 1em 0 1em 0 !important;
   }
 
-  /* line 1318, ../sass/main.scss */
+  /* line 1323, ../sass/main.scss */
   header br {
     display: none;
   }
-  /* line 1322, ../sass/main.scss */
+  /* line 1327, ../sass/main.scss */
   header.style1 {
     padding: 0 0 1em 0;
   }
-  /* line 1325, ../sass/main.scss */
+  /* line 1330, ../sass/main.scss */
   header.style1 h2 {
     font-size: 1.5em;
     letter-spacing: 0.075em;
     line-height: 1.25em;
   }
-  /* line 1331, ../sass/main.scss */
+  /* line 1336, ../sass/main.scss */
   header.style1 p {
     display: block;
     margin: 0;
   }
 
   /* Button */
-  /* line 1340, ../sass/main.scss */
+  /* line 1345, ../sass/main.scss */
   input,
   input[type="button"],
   input[type="submit"],
@@ -2601,37 +2607,37 @@ ol.default li {
   }
 
   /* List */
-  /* line 1357, ../sass/main.scss */
+  /* line 1362, ../sass/main.scss */
   ul.actions {
     margin: 2em 0 0 0;
   }
-  /* line 1360, ../sass/main.scss */
+  /* line 1365, ../sass/main.scss */
   ul.actions li {
     margin: 15px 0 0 0;
   }
 
-  /* line 1366, ../sass/main.scss */
+  /* line 1371, ../sass/main.scss */
   form ul.actions {
     margin: 1em 0 0 0;
   }
 
   /* Feature List */
-  /* line 1373, ../sass/main.scss */
+  /* line 1378, ../sass/main.scss */
   .feature-list section {
     border-top: solid 1px #eee;
   }
-  /* line 1377, ../sass/main.scss */
+  /* line 1382, ../sass/main.scss */
   .feature-list > div > div:first-child > div:first-child > section {
     border-top: 0;
     padding-top: 0;
   }
-  /* line 1382, ../sass/main.scss */
+  /* line 1387, ../sass/main.scss */
   .feature-list h3 {
     position: relative;
     padding: 4px 0 0 48px;
     line-height: 1.25em;
   }
-  /* line 1387, ../sass/main.scss */
+  /* line 1392, ../sass/main.scss */
   .feature-list h3:before {
     position: absolute;
     left: 0;
@@ -2641,26 +2647,26 @@ ol.default li {
     line-height: 32px;
     font-size: 16px;
   }
-  /* line 1398, ../sass/main.scss */
+  /* line 1403, ../sass/main.scss */
   .feature-list p {
     margin: 0 0 0 48px;
   }
 
   /* Box */
-  /* line 1408, ../sass/main.scss */
+  /* line 1413, ../sass/main.scss */
   .box.post-excerpt .image.left {
     position: relative;
     top: 0.25em;
     width: 25%;
     margin: 0;
   }
-  /* line 1416, ../sass/main.scss */
+  /* line 1421, ../sass/main.scss */
   .box.post-excerpt h3, .box.post-excerpt p {
     margin-left: 32.5%;
   }
 
   /* Off-Canvas Navigation */
-  /* line 1424, ../sass/main.scss */
+  /* line 1429, ../sass/main.scss */
   #page-wrapper {
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -2673,7 +2679,7 @@ ol.default li {
     padding-bottom: 1px;
   }
 
-  /* line 1430, ../sass/main.scss */
+  /* line 1435, ../sass/main.scss */
   #titleBar {
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -2692,11 +2698,11 @@ ol.default li {
     z-index: 10001;
     background: none;
   }
-  /* line 1442, ../sass/main.scss */
+  /* line 1447, ../sass/main.scss */
   #titleBar .title {
     display: none;
   }
-  /* line 1446, ../sass/main.scss */
+  /* line 1451, ../sass/main.scss */
   #titleBar .toggle {
     position: absolute;
     top: 0;
@@ -2704,7 +2710,7 @@ ol.default li {
     width: 60px;
     height: 44px;
   }
-  /* line 1453, ../sass/main.scss */
+  /* line 1458, ../sass/main.scss */
   #titleBar .toggle:before {
     -moz-transition: all .15s ease-in-out;
     -webkit-transition: all .15s ease-in-out;
@@ -2730,12 +2736,12 @@ ol.default li {
     background-color: rgba(92, 95, 103, 0.5);
     border-radius: 0.25em;
   }
-  /* line 1476, ../sass/main.scss */
+  /* line 1481, ../sass/main.scss */
   #titleBar .toggle:active:before {
     background-color: rgba(92, 95, 103, 0.75);
   }
 
-  /* line 1483, ../sass/main.scss */
+  /* line 1488, ../sass/main.scss */
   #navPanel {
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -2760,7 +2766,7 @@ ol.default li {
     background: #242730 url("images/overlay.png");
     box-shadow: inset -3px 0px 4px 0px rgba(0, 0, 0, 0.1);
   }
-  /* line 1498, ../sass/main.scss */
+  /* line 1503, ../sass/main.scss */
   #navPanel .link {
     display: block;
     color: rgba(255, 255, 255, 0.5);
@@ -2774,55 +2780,55 @@ ol.default li {
     border-top: solid 1px rgba(255, 255, 255, 0.05);
     margin: 0 15px 0 15px;
   }
-  /* line 1511, ../sass/main.scss */
+  /* line 1516, ../sass/main.scss */
   #navPanel .link:first-child {
     border-top: 0;
   }
-  /* line 1516, ../sass/main.scss */
+  /* line 1521, ../sass/main.scss */
   #navPanel .indent-1 {
     display: inline-block;
     width: 1em;
   }
-  /* line 1521, ../sass/main.scss */
+  /* line 1526, ../sass/main.scss */
   #navPanel .indent-2 {
     display: inline-block;
     width: 2em;
   }
-  /* line 1526, ../sass/main.scss */
+  /* line 1531, ../sass/main.scss */
   #navPanel .indent-3 {
     display: inline-block;
     width: 3em;
   }
-  /* line 1531, ../sass/main.scss */
+  /* line 1536, ../sass/main.scss */
   #navPanel .indent-4 {
     display: inline-block;
     width: 4em;
   }
-  /* line 1536, ../sass/main.scss */
+  /* line 1541, ../sass/main.scss */
   #navPanel .indent-5 {
     display: inline-block;
     width: 5em;
   }
-  /* line 1541, ../sass/main.scss */
+  /* line 1546, ../sass/main.scss */
   #navPanel .depth-0 {
     color: #fff;
   }
 
-  /* line 1548, ../sass/main.scss */
+  /* line 1553, ../sass/main.scss */
   body.navPanel-visible #page-wrapper {
     -moz-transform: translateX(275px);
     -webkit-transform: translateX(275px);
     -ms-transform: translateX(275px);
     transform: translateX(275px);
   }
-  /* line 1552, ../sass/main.scss */
+  /* line 1557, ../sass/main.scss */
   body.navPanel-visible #titleBar {
     -moz-transform: translateX(275px);
     -webkit-transform: translateX(275px);
     -ms-transform: translateX(275px);
     transform: translateX(275px);
   }
-  /* line 1556, ../sass/main.scss */
+  /* line 1561, ../sass/main.scss */
   body.navPanel-visible #navPanel {
     -moz-transform: translateX(0);
     -webkit-transform: translateX(0);
@@ -2831,11 +2837,11 @@ ol.default li {
   }
 
   /* Wrappers */
-  /* line 1564, ../sass/main.scss */
+  /* line 1569, ../sass/main.scss */
   .wrapper {
     padding: 15px 15px 5em 15px;
   }
-  /* line 1567, ../sass/main.scss */
+  /* line 1572, ../sass/main.scss */
   .wrapper .title {
     font-size: 0.9em;
     width: 18em;
@@ -2846,45 +2852,45 @@ ol.default li {
     margin-left: -9em;
     padding-top: 0.5em;
   }
-  /* line 1577, ../sass/main.scss */
+  /* line 1582, ../sass/main.scss */
   .wrapper .title:before, .wrapper .title:after {
     height: 15px;
     bottom: -15px;
     background-size: 100% 100%;
   }
 
-  /* line 1586, ../sass/main.scss */
+  /* line 1591, ../sass/main.scss */
   #header-wrapper {
     padding: 6em 2em 6em 2em;
   }
 
-  /* line 1590, ../sass/main.scss */
+  /* line 1595, ../sass/main.scss */
   #footer-wrapper {
     padding-top: 3em;
   }
-  /* line 1593, ../sass/main.scss */
+  /* line 1598, ../sass/main.scss */
   #footer-wrapper .feature-list section {
     border-top-color: #eee;
     border-top-color: rgba(255, 255, 255, 0.05);
   }
 
   /* Logo */
-  /* line 1602, ../sass/main.scss */
+  /* line 1607, ../sass/main.scss */
   #logo {
     text-align: center;
   }
-  /* line 1605, ../sass/main.scss */
+  /* line 1610, ../sass/main.scss */
   #logo .logo--image {
     max-width: 128px;
     margin: 2rem;
     margin-bottom: 3rem;
   }
-  /* line 1611, ../sass/main.scss */
+  /* line 1616, ../sass/main.scss */
   #logo h1 {
     font-size: 1.5em;
     letter-spacing: 0.2em;
   }
-  /* line 1616, ../sass/main.scss */
+  /* line 1621, ../sass/main.scss */
   #logo p {
     margin: 1.25em 0 0 0;
     display: block;
@@ -2893,19 +2899,19 @@ ol.default li {
   }
 
   /* Nav */
-  /* line 1626, ../sass/main.scss */
+  /* line 1631, ../sass/main.scss */
   #nav {
     display: none;
   }
 
   /* Intro */
-  /* line 1632, ../sass/main.scss */
+  /* line 1637, ../sass/main.scss */
   #intro {
     text-align: center;
     padding: 1em 2em 1em 2em !important;
     margin: 0 auto;
   }
-  /* line 1637, ../sass/main.scss */
+  /* line 1642, ../sass/main.scss */
   #intro .style2 {
     font-size: 1.5em;
     letter-spacing: 0.05em;
@@ -2914,43 +2920,43 @@ ol.default li {
   }
 
   /* Main */
-  /* line 1647, ../sass/main.scss */
+  /* line 1652, ../sass/main.scss */
   #main {
     padding: 1em 0 0 0;
   }
 
   /* Content */
-  /* line 1653, ../sass/main.scss */
+  /* line 1658, ../sass/main.scss */
   #content {
     padding: 0 0 2em 0;
   }
-  /* line 1657, ../sass/main.scss */
+  /* line 1662, ../sass/main.scss */
   #content header.style1 {
     padding-bottom: 2.5em;
   }
 
   /* Footer */
-  /* line 1666, ../sass/main.scss */
+  /* line 1671, ../sass/main.scss */
   #footer hr {
     display: none;
   }
 
   /* Copyright */
-  /* line 1673, ../sass/main.scss */
+  /* line 1678, ../sass/main.scss */
   #copyright {
     padding: 2em 0 0 0;
   }
-  /* line 1676, ../sass/main.scss */
+  /* line 1681, ../sass/main.scss */
   #copyright ul {
     padding: 1em 2em;
     width: 100%;
   }
-  /* line 1680, ../sass/main.scss */
+  /* line 1685, ../sass/main.scss */
   #copyright ul li {
     display: block;
     margin: 0.5em 0 0 0;
   }
-  /* line 1684, ../sass/main.scss */
+  /* line 1689, ../sass/main.scss */
   #copyright ul li:first-child {
     margin-top: 0;
   }
